[workspace]
resolver = "2"

members = [
    "drink",
    "drink/test-macro",
    "drink-cli",
]

exclude = [
    "examples/",
]

[workspace.package]
authors = ["Cardinal"]
edition = "2021"
homepage = "https://github.com/Cardinal-Cryptography/drink"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Cardinal-Cryptography/drink"
version = "0.9.0"

[workspace.dependencies]
anyhow = { version = "1.0.71" }
cargo_metadata = { version = "0.18.1" }
clap = { version = "4.3.4" }
contract-build = { version = "4.0.0-rc.1" }
contract-metadata = { version = "4.0.0-rc.1" }
contract-transcode = { version = "4.0.0-rc.1" }
convert_case = { version = "0.6.0" }
crossterm = { version = "0.26.0" }
darling = { version = "0.20.3" }
parity-scale-codec = { version = "3.6.9" }
parity-scale-codec-derive = { version = "3.6.9" }
proc-macro2 = { version = "1" }
quote = { version = "1" }
ratatui = { version = "0.21.0" }
scale-info = { version = "2.10.0" }
serde_json = { version = "1.0" }
syn = { version = "2" }
thiserror = { version = "1.0.40" }
wat = { version = "1.0.71" }

# Substrate dependencies
frame-metadata = { version = "16.0.0" }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", rev = "28f6225beb66a35167af5709606f1d76ca799ef6" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", rev = "28f6225beb66a35167af5709606f1d76ca799ef6" }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", rev = "28f6225beb66a35167af5709606f1d76ca799ef6" }
pallet-contracts = { git = "https://github.com/paritytech/polkadot-sdk", rev = "28f6225beb66a35167af5709606f1d76ca799ef6" }
pallet-contracts-uapi = { git = "https://github.com/paritytech/polkadot-sdk", rev = "28f6225beb66a35167af5709606f1d76ca799ef6" }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", rev = "28f6225beb66a35167af5709606f1d76ca799ef6" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", rev = "28f6225beb66a35167af5709606f1d76ca799ef6" }
sp-externalities = { git = "https://github.com/paritytech/polkadot-sdk", rev = "28f6225beb66a35167af5709606f1d76ca799ef6" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", rev = "28f6225beb66a35167af5709606f1d76ca799ef6" }
sp-runtime-interface = { git = "https://github.com/paritytech/polkadot-sdk", rev = "28f6225beb66a35167af5709606f1d76ca799ef6" }

# Local dependencies

drink = { version = "0.9.0", path = "drink" }
drink-test-macro = { version = "0.9.0", path = "drink/test-macro" }
